crates/plotnik-lib/tests/05-typegen/alternations/error_conflicting_ref_types_across_branches.txt
Row = (pair key: (_) @key value: (_) @val)
Name = (property_identifier) @name
Q = (program (expression_statement (parenthesized_expression (object [(Row) @x (Name) @x]))))
------------------ DIAGNOSTICS -------------------
error: capture `@x` has incompatible types across branches
 --> query.ptk:3:77
  |
3 | Q = (program (expression_statement (parenthesized_expression (object [(Row) @x (Name) @x]))))
  |                                                                             ^^        -- and a different type here
  |
help: make every branch produce the same type, or label the branches for an enum
